# CryptoFuturesBot

./: .env.sample  .gitignore  .replit  Crypto_Futures_Dashboard.py  DEAD_CODE_DETECTION.md  README.md  README.txt  app.py  auto_backup.sh  backtest.py  backup_coinswitch.sh  check_env.py  codeium_explain_module.py  coinswitch_api.py  coinswitch_live_precision_app.py  coinswitch_wallet_balance_test.py  demo_plotting.py  detect_unused_code.py  e --continue  enhanced_main.py  env_loader.py  env_test.py  environment.yml  futures_data.json  gemini_auto_test.py  generate_env_sample.sh  git_aliases.sh  git_auto_sync.sh  indicators.py  live-check.yml  live_price_feed.py  main.py  main_runner.py  master_controller.py  openai_knowledge_search.py  openai_knowledge_tool.py  portfolio_data.json  precision_data_20250707_130844.csv  precision_data_20250707_130844.json  pyproject.toml  (+16 more)
alerts/: telegram.py
bot/: backtest.py  coinswitch_api.py  indicators.py  main.py  signal_generator.py  streamlit_app.py  telegram_bot.py
core/: __init__.py  coinswitch_api_utils.py  env_utils.py  envloader.py  exchange.py  math_utils.py  risk_manager.py  trade_executor.py
dashboard/: __init__.py  streamlit_dashboard.py
infra/: error_autofix.py  error_detector.py  streamlit_app.py  telegram_bot.py
part1_core/: api_connector.py  coinswitch_api_utils.py  coinswitch_env_loader.py  coinswitch_exchange_precision_utils.py  coinswitch_futures_cancel_all_utils.py  coinswitch_futures_cancel_one_utils.py  coinswitch_futures_order_utils.py  coinswitch_futures_place_order_utils.py  coinswitch_min_qty_utils.py  (+32 more)
(+33 files in other folders)
